# proptest-semver

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: hygiene.yml  testing.yml
src/: lib.rs
tests/: main.rs
