# SPDX-License-Identifier: Apache-2.0
# Copyright 2025 canardleteer
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
[package]
name = "proptest-semver"
version = "0.1.0"
edition = "2021"
exclude = []
license = "Apache-2.0"
keywords = ["semver", "testing", "tests"]
authors = ["canardleteer <eris.has.a.dad+github@gmail.com>"]
repository = "https://github.com/canardleteer/protest-semver"
homepage = "https://github.com/canardleteer/protest-semver"
categories = ["development-tools::testing"]
readme = "README.md"
description = "Property Testing implementations for Semantic Versioning"


[dependencies]
proptest = "1.6.0"
# NOTE(canardleteer): Could probably be removed easily.
proptest-derive = "0.5.1"
semver = "1.0.25"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3
